--- a/sesi06/index.html
+++ b/sesi06/index.html
@@ -9,7 +9,19 @@
     <h1>javascript Asyncronous Programming</h1>
     <p>Please Pen Nonton </p>
     <!-- <script src="modul/callback.js"></script>  -->
-    <script src="modul/promise.js"></script>
-    
+    <!-- <script src="modul/promise.js"></script> -->
+    <script src="modul/asyc_await.js"></script>
+    <script>
+        console.log("+++ REST PARAMETER +++");
+        function sum(...params) {
+            let total = 0;
+            for (const param of params) {
+                total += param;
+            }
+            return total;
+        }
+        console.log(sum(70, 87, 95, 68, 90));
+        
+    </script>
 </body>
 </html>
